update path workflow

--- a/.github/workflows/infra-prod.yaml
+++ b/.github/workflows/infra-prod.yaml
@@ -5,13 +5,13 @@ on:
     branches:
         - main
     paths:
-      - "infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md"
   pull_request:
     branches:
         - main
     paths:
-      - "infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md"
       
 jobs:
