--- a/.github/workflows/infra-staging.yaml
+++ b/.github/workflows/infra-staging.yaml
@@ -6,13 +6,13 @@ on:
     branches:
         - staging
     paths:
-      - "infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md"
   pull_request:
     branches:
         - staging
     paths:
-      - "infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md" 
 
 jobs:
