--- a/.github/workflows/infra-dev.yaml
+++ b/.github/workflows/infra-dev.yaml
@@ -5,7 +5,7 @@ on:
     branches:
         - dev
     paths:
-      - "infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md"
   pull_request:
     branches:
