--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
     paths:
-      - "app/**"
+      - "/Chapter5/gha/app/**"
       - "!**/README.md"
 
 # Job declaration starts.
