--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -2,7 +2,7 @@
 name: practicalgitops.app
 env:
   DOCKERHUB_TAG: "${{ secrets.DOCKERHUB_USERNAME }}/practicalgitops"
-  DOCKERFILE_PATH: app
+  DOCKERFILE_PATH: /Chapter7/app
 
 on:
   push:
