--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -2,14 +2,14 @@
 name: practicalgitops.app
 env:
   DOCKERHUB_TAG: "${{ secrets.DOCKERHUB_USERNAME }}/practicalgitops"
-  DOCKERFILE_PATH: /Chapter7/app
+  DOCKERFILE_PATH: app
 
 on:
   push:
     branches:
       - main
     paths:
-      - "/Chapter7/app/**"
+      - "Chapter7/app/**"
       - "!**/README.md"
 
 # Job declaration starts.
