--- a/.github/workflows/infra-prod.yaml
+++ b/.github/workflows/infra-prod.yaml
@@ -13,7 +13,8 @@ on:
     paths:
       - "Chapter6/infra/**"
       - "!**/README.md"
-
+  workflow_dispatch:
+  
 jobs:
   terraform:
     name: "Terraform"
