--- a/.github/workflows/infra-staging.yaml
+++ b/.github/workflows/infra-staging.yaml
@@ -14,7 +14,8 @@ on:
     paths:
       - "Chapter6/infra/**"
       - "!**/README.md" 
-
+  workflow_dispatch:
+          
 jobs:
   terraform:
     name: "Terraform"
