--- a/.github/workflows/infra-dev.yaml
+++ b/.github/workflows/infra-dev.yaml
@@ -1,18 +1,15 @@
-name: practical-gitops.staging.infra
+name: practicalgitops.dev.infra
 
 on:
   push:
     branches:
-        - staging
+        - dev
     paths:
       - "Chapter6/infra/**"
       - "!**/README.md"
   pull_request:
     branches:
-        - staging
-    paths:
-      - "Chapter6/infra/**"
-      - "!**/README.md" 
+        - dev
 
 jobs:
   terraform:
@@ -32,12 +29,12 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.1.0
+          terraform_version: 1.0.0
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config=staging.hcl
+        run: terraform init -backend-config=dev.hcl
       
       - name: Terraform Validate
         id: validate
@@ -49,27 +46,24 @@ jobs:
         run: terraform plan -no-color
         continue-on-error: true
 
-      - name: Terraform Plan Output
-        uses: actions/github-script@v6
+      - uses: actions/github-script@0.9.0
         if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const output = `## Terraform Staging Infra Plan
-
+            const output = `#### Terraform Review \`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization \`${{ steps.init.outcome }}\`
             #### Terraform Validation \`${{ steps.validate.outcome }}\`
             #### Terraform Plan \`${{ steps.plan.outcome }}\`
-
             <details><summary>Show Plan</summary>
+            \`\`\`\n
             ${process.env.PLAN}
+            \`\`\`
             </details>
-
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-            github.rest.issues.createComment ({
+            github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -81,5 +75,5 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/staging' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/dev' && github.event_name == 'push'
         run: terraform apply
