--- a/.github/workflows/infra-prod.yaml
+++ b/.github/workflows/infra-prod.yaml
@@ -3,17 +3,17 @@ name: practicalgitops.prod.infra
 on:
   push:
     branches:
-      - main
+        - main
     paths:
-      - "Chapter6/infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md"
   pull_request:
     branches:
-      - main
+        - main
     paths:
-      - "Chapter6/infra/**"
+      - "/Chapter6/infra/**"
       - "!**/README.md"
-  
+      
 jobs:
   terraform:
     name: "Terraform"
@@ -38,7 +38,7 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init -backend-config=prod.hcl
-
+      
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
@@ -58,13 +58,17 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const output = `## Terraform Prod Infra Plan
+
             #### Terraform Initialization \`${{ steps.init.outcome }}\`
             #### Terraform Validation \`${{ steps.validate.outcome }}\`
             #### Terraform Plan \`${{ steps.plan.outcome }}\`
+
             <details><summary>Show Plan</summary>
             ${process.env.PLAN}
             </details>
+
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+            
             github.rest.issues.createComment ({
               issue_number: context.issue.number,
               owner: context.repo.owner,
