--- a/.github/workflows/infra-staging.yaml
+++ b/.github/workflows/infra-staging.yaml
@@ -25,9 +25,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Uncomment Terraform Cloud Backend Configuration file
-        id: uncomment
-        run: sed -i 's/^#*//' backend.tf
+      # - name: Uncomment Terraform Cloud Backend Configuration file
+      #   id: uncomment
+      #   run: sed -i 's/^#*//' backend.tf
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
