--- a/.github/workflows/infra-prod.yaml
+++ b/.github/workflows/infra-prod.yaml
@@ -5,13 +5,13 @@ on:
     branches:
         - main
     paths:
-      - "/Chapter6/infra/**"
+      - "Chapter6/infra/**"
       - "!**/README.md"
   pull_request:
     branches:
         - main
     paths:
-      - "/Chapter6/infra/**"
+      - "Chapter6/infra/**"
       - "!**/README.md"
       
 jobs:
@@ -20,14 +20,14 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: "infra"
+        working-directory: "Chapter6/infra"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Uncomment Terraform Cloud Backend Configuration file
-        id: uncomment
-        run: sed -i 's/^#*//' backend.tf
+      # - name: Uncomment Terraform Cloud Backend Configuration file
+      #   id: uncomment
+      #   run: sed -i 's/^#*//' backend.tf
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
